--- a/style.css
+++ b/style.css
@@ -149,7 +149,7 @@ footer {
 
 footer h3 {
   color: #b51c2c;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .logo-container {
@@ -157,8 +157,10 @@ footer h3 {
 }
 
 .kw-logo {
-  max-height: 60px;
+  max-height: 100px;
   width: auto;
+  display: block;
+  margin: 0 auto;
 }
 
 /* ---------- RESPONSIVE ---------- */
