--- a/style.css
+++ b/style.css
@@ -7,16 +7,20 @@ body {
 
 /* ---------- BANNER IMAGE SECTION ---------- */
 .banner-section {
-  width: 100%;
-  margin: 0;
+  width: 100vw;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
   padding: 0;
 }
 
 .banner-img {
   width: 100%;
-  max-height: 800px;
-  object-fit: cover;
+  height: auto;
   display: block;
+  object-fit: cover;
   margin: 0;
   padding: 0;
   border-bottom: 2px solid #ccc;
